# zenith

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-15-zenith-plan.md  2026-04-17-auto-update-plan.md
docs/superpowers/specs/: 2026-04-15-zenith-design.md  2026-04-17-auto-update-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  storage_util.rs  updater.rs
src-tauri/src/credentials/: commands.rs
src-tauri/src/monitoring/: collector.rs  commands.rs  manager.rs  mod.rs  types.rs
src-tauri/src/sessions/: commands.rs  mod.rs  storage.rs  types.rs
src-tauri/src/settings/: commands.rs  types.rs
src-tauri/src/sftp/: commands.rs  errors.rs  manager.rs  mod.rs  types.rs
src-tauri/src/ssh/: addr.rs  commands.rs  connection.rs  known_hosts.rs  manager.rs  mod.rs  types.rs
src/components/command-palette/: CommandPalette.module.css  CommandPalette.tsx
src/components/dialogs/: PasswordPrompt.tsx  QuickConnect.module.css  QuickConnect.tsx
src/components/files/: FileBrowser.module.css  FileBrowser.tsx  (+1 more)
src/hooks/: useMonitoring.ts  useSftp.ts  useSshConnection.ts
src/lib/: log.ts
src/stores/: layoutStore.ts  sessionStore.ts  settingsStore.ts  sftpStore.ts  splitStore.ts  tabStore.ts  updaterStore.ts
src/styles/: global.css  theme.css
src/updater/: assets.test.ts  assets.ts  versions.test.ts  versions.ts
src/utils/: droppedItems.ts  remotePath.test.ts  remotePath.ts
(+27 files in other folders)
